navbar z-index fixed

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ p{
 ul{
     list-style: none;
 }
-nav{
+nav{ 
+    z-index: 10;
     position: fixed;
     width: 100%;
     background-color: #4d636f;
